# atemoya

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  LICENSE  README.md  atemoya.opam  clean_output.sh  create_opam.zsh  docker-compose.yml  docker-run.sh  dune-project  liquid_tickers.txt  pyproject.toml  quickstart.sh  regenerate_showcase.sh
.claude/: settings.json  settings.local.json
alternative/: README.md
alternative/google_trends/python/: analyze_trends.py  fetch_trends.py
alternative/insider_trading/python/: analyze_insider.py  fetch_form4.py
alternative/macro_dashboard/: README.md
alternative/macro_dashboard/ocaml/: dune-project  macro_dashboard.opam
alternative/nlp_sentiment/: README.md
alternative/nlp_sentiment/python/: ontology.py  (+2 more)
data/: tickers.yml
lib/: dcf_deterministic.ml  dcf_deterministic.mli  dcf_probabilistic.ml  dcf_probabilistic.mli  dune  mpt.ml  mpt.mli
lib/python/: __init__.py  config.py  context.py  iv.py  notify.py  retry.py  theme.py  yfinance_utils.py
lib/thetadata/: start_terminal.sh
monitoring/earnings_calendar/: README.md
monitoring/watchlist/: README.md  run_watchlist.sh
prep/pri/: mpt.py
prep/val/: dcf_deterministic.py  dcf_probabilistic.py
pricing/dispersion_trading/: README.md
pricing/earnings_vol/: FORWARD_TESTING.md  README.md
pricing/forward_factor/: .gitignore  README.md
pricing/forward_factor/python/: fetch_chains.py  notify_signals.py  pyproject.toml  scan_signals.py
pricing/forward_factor/python/fetch/: collect_snapshot.py  replay_backfill.py
pricing/forward_factor/python/viz/: plot_forward_factor.py
pricing/fx_hedging/: README.md
pricing/fx_hedging/ocaml/: dune-project  fx_hedging.opam
pricing/fx_hedging/ocaml/lib/: dune  exposure_analysis.ml  exposure_analysis.mli  forwards.ml  forwards.mli  futures.ml  futures.mli  futures_options.ml  futures_options.mli  hedge_strategies.ml  hedge_strategies.mli  io.ml  io.mli  margin.ml  margin.mli  optimization.ml  optimization.mli  simulation.ml  simulation.mli  types.ml  types.mli
pricing/fx_hedging/ocaml/test/: dune  test_fx_hedging.ml
pricing/gamma_scalping/: README.md
pricing/gamma_scalping/ocaml/: dune-project  gamma_scalping.opam
pricing/gamma_scalping/ocaml/lib/: dune  hedging.ml  hedging.mli  io.ml  io.mli  pnl_attribution.ml  pnl_attribution.mli  positions.ml  positions.mli  pricing.ml  pricing.mli  simulation.ml  simulation.mli  types.ml  types.mli
pricing/gamma_scalping/ocaml/test/: dune  test_gamma_scalping.ml
pricing/liquidity/: README.md
pricing/market_regime_forecast/: README.md
pricing/market_regime_forecast/ocaml/: dune-project  market_regime_forecast.opam
pricing/market_regime_forecast/ocaml/lib/: bocpd.ml  bocpd.mli  classifier.ml  dune  garch.ml  gp.ml  gp.mli  hmm.ml  io.ml  ms_garch.ml  ms_garch.mli  types.ml
pricing/market_regime_forecast/ocaml/test/: dune  test_market_regime_forecast.ml
pricing/options_hedging/: README.md  SPEC.md  TROUBLESHOOTING.md  config.json
pricing/pairs_trading/: README.md
pricing/perpetual_futures/: README.md
pricing/pre_earnings_straddle/: FORWARD_TESTING.md  README.md
pricing/regime_downside/: README.md  TROUBLESHOOTING.md
pricing/skew_trading/: README.md  config.json  cron_collect.sh
pricing/skew_trading/ocaml/: dune-project  skew_trading.opam
pricing/skew_trading/ocaml/lib/: dune  io.ml  io.mli  signal_generation.ml  signal_generation.mli  skew_measurement.ml  skew_measurement.mli  skew_strategies.ml  skew_strategies.mli  types.ml  types.mli
pricing/skew_verticals/: FORWARD_TESTING.md  QUICKSTART.md  README.md  run_scanner.sh
pricing/systematic_risk_signals/: README.md
pricing/tail_risk_forecast/: README.md
pricing/variance_swaps/: README.md
pricing/variance_swaps/ocaml/: dune-project  variance_swaps.opam
pricing/variance_swaps/ocaml/lib/: dune  io.ml  io.mli  realized_variance.ml  realized_variance.mli  replication.ml  replication.mli  types.ml  types.mli  variance_swap_pricing.ml  variance_swap_pricing.mli  vrp_calculation.ml  vrp_calculation.mli
pricing/variance_swaps/ocaml/test/: dune  test_variance_swaps.ml
pricing/volatility_arbitrage/: README.md
src/: atemoya.ml  atemoya.py  dune
src/valuation/: dune  valuation.ml  valuation.py
test/: dune
typeset/: atemoya.tex  ref.bib
typeset/sec/: mon.tex  pri.tex  val.tex
typeset/sub/: i.tex
valuation/analyst_upside/: README.md
valuation/crypto_treasury/: README.md
valuation/dcf_deterministic/: README.md  TROUBLESHOOTING.md
valuation/dcf_probabilistic/: README.md  TROUBLESHOOTING.md
valuation/dcf_reit/: README.md
valuation/dividend_income/: README.md
valuation/etf_analysis/: README.md
valuation/garp_peg/: README.md
valuation/growth_analysis/: README.md
valuation/normalized_multiples/: README.md
valuation/relative_valuation/: README.md
viz/pri/: mpt.py
viz/val/: dcf_probabilistic.py
(+606 files in other folders)
