[project]
name = "atemoya"
version = "0.1.0"
description = "Quantitative finance models - Python data fetching and visualization"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "cvxpy>=1.5.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]
