[project]
name = "atemoya"
version = "0.1.0"
description = "Quantitative finance models - Python data fetching and visualization"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "cvxpy>=1.5.0",
    "scipy>=1.14.0",
    "edgartools>=5.12.2",
    "fredapi>=0.5.0",
]

[project.optional-dependencies]
ibkr = [
    "ib-insync>=0.9.86",
]
discord = [
    "discord.py>=2.3.0",
]
nlp = [
    "sentence-transformers>=2.2.0",
    "beautifulsoup4>=4.12.0",
]
trends = [
    "pytrends>=4.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]
