(lang dune 3.0)
(name skew_trading)

(generate_opam_files true)

(package
 (name skew_trading)
 (synopsis "Volatility Skew Trading Strategies")
 (description "Trade volatility skew using risk reversals, butterflies, and other strategies")
 (depends
  (ocaml (>= 4.14))
  dune
  yojson
  ppx_deriving))
